<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_background_1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/medical_image_1" />
            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_view_0"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="2dp"
                    app:civ_border_width="1dp"
                    app:civ_circle_background_color="@color/colorBlack"
                    android:src="@drawable/male_doc"/>

                <TextView
                    android:id="@+id/text_view_0"
                    android:layout_width="wrap_content"
                    android:layout_height="134dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="-24dp"
                    android:layout_toEndOf="@id/image_view_0"
                    android:drawableStart="@drawable/image_chooser_2"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/upload_profile_image"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/basic_information"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/edit_text_0"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_white_deisgn"
            android:imeOptions="actionNext"
            android:autofillHints="@string/full_name_hint"
            android:hint="@string/full_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbbs_completion_institute_name"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/edit_text_1"
            android:inputType="textCapWords"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_white_deisgn"
            android:imeOptions="actionNext"
            android:autofillHints="@string/mbbs_completion_institute_name_hint"
            android:hint="@string/name_of_the_institute_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passing_year"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/edit_text_2"
            android:inputType="number"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_white_deisgn"
            android:imeOptions="actionNext"
            android:autofillHints="@string/passing_year_hint"
            android:hint="@string/passing_year_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_degree"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/edit_text_3"
            android:inputType="textCapCharacters"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_white_deisgn"
            android:imeOptions="actionNext"
            android:autofillHints="@string/completed_degree_et_hint"
            android:hint="@string/completed_degree_et_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialization"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/text_view_1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/drop_down_spinner_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            tools:targetApi="o"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_of_practicing_year"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/edit_text_4"
            android:inputType="number"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_white_deisgn"
            android:imeOptions="actionNext"
            android:autofillHints="@string/no_of_practicing_year"
            android:hint="@string/no_of_practicing_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <EditText
            android:autofillHints="@string/phone_et_hint"
            android:id="@+id/edit_text_5"
            android:inputType="phone"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_white_deisgn"
            android:imeOptions="actionNext"
            android:hint="@string/phone_et_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_area"
            android:textSize="22sp"
            android:textColor="#000000"/>
        <Spinner
            android:id="@+id/spinner_0"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/drop_down_spinner_2"
            android:imeOptions="actionNext"
            android:entries="@array/division_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginBottom="2dp"
            android:id="@+id/button_0"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:text="@string/next"/>
    </LinearLayout>
</ScrollView>