<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attention"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:textSize="20sp"/>

        <View
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorRed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/birth_certificate_hint_text_2"
            android:textColor="#000000"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/edit_text_0"
            android:autofillHints="@string/birth_certificat_hint_et"
            android:inputType="number"
            android:background="@drawable/button_background_1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:imeOptions="actionDone"
            android:hint="@string/birth_certificat_hint_et"
            tools:targetApi="o" />
        <ImageView
            android:background="@drawable/button_background_1"
            android:contentDescription="@string/birth_certificate_hint_text_2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/image_view_0"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/upload_doc_image"/>
        <Button
            android:background="@drawable/button_background_2"
            android:id="@+id/button_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/upload_birth_certificate_hint_btn"/>
        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout_0"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="@color/colorRed"
                android:text="@string/another_document_hint_tv"/>
            <ImageView
                android:src="@drawable/upload_doc_image"
                android:id="@+id/image_view_1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/button_background_1"
                android:layout_gravity="center"
                android:contentDescription="@string/aanother_document_image_hint"/>
            <Button
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button_background_2"
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/another_document_btn_hint"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_background_3"
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn"/>
    </LinearLayout>
</ScrollView>